static/style.css
@import url(ply.css);

body, html {
    margin-top: 0;
    margin-bottom: 0;
    height: 100%;
    font-family: Helvetica, sans-serif;
}

.grid {
    width: 630px;
}

#title {
    background-color: #222222;
    color: #DDDDDD;
    width: 100%;
    margin-bottom: 20px;
}

#title h1 {
    margin: 0;
    padding: 10px 0;
    line-height: 1.5;
    text-transform: lowercase;
}

#title h1 img, p img {
    vertical-align: middle;
}

#content, #TB_window {
    font-size: 1.2em;
    line-height: 1.2em;
}

#page {
    min-height: 100%;
    margin: 0 auto -50px;
    padding: 0;
}

#not-a-footer, #footer {
    clear: both;
    height: 50px;
}

#footer {
    background-color: #eee;
    height: 49px;
    z-index: 4;
    overflow: visible;
    border-top: 1px solid #ccc;
    margin: 0 auto;
    padding: 0;
}

#footer .grid {
    position: relative;
}

#footer-giraffe {
    position: absolute;
    overflow: hidden;
    left: 0px;
    top: -10px;
    height: 59px;
    width: 60px;
}

#footer-adfree {
    position: absolute;
    right: 0px;
    top: -10px;
}

/* hi */

#title a:link, #title a:hover,
.dialog a:link, .dialog a:hover {
    color: #99f;
}

#title a:visited, #title a:active,
.dialog a:visited, .dialog a:active {
    color: #c9f;
}

/* stuff */

.asset .meta, .comment .meta {
    font-size: 0.9em;
    line-height: 0.9em;
}

/* api editor */

#api-request-body {
    width: 100%;
    height: 200px;
}

#api-result-about {
    line-height: 20px;
    overflow: hidden;
    white-space: nowrap;
}

#api-result-body {
    height: 200px;
    overflow: auto;
    border: 1px solid gray;
}

textarea, pre {
    font-family: "Anonymous Pro", Anonymous, monospace;
    font-size: 1.0em;
    line-height: 1.0em;
}

/* comments */

#post-comment textarea {
    font-family: Helvetica, sans-serif;
    font-size: 1em;
    line-height: 1;
    width: 100%;
    height: 20ex;
}

/* dialogs */

.hidden {
    display: none;
}

a.button, .dialog a.button, input[type="submit"] {
    font-family: Helvetica, Arial, sans-serif;
    font-size: 1.0em; /* 12px */
    line-height: 16px !important; /* 16px */

    background: #222 url(alert-overlay.png) repeat-x;
    color: #fff;

    display: inline-block;
    padding: 2px 5px;
    text-decoration: none;
    font-weight: bold;
    -moz-border-radius: 8px;
    -webkit-border-radius: 8px;
    border-radius: 8px;
    -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
    text-shadow: 0 -1px 1px rgba(0, 0, 0, 0.25);
    border: 0px;
    border-bottom: 1px solid rgba(0, 0, 0, 0.25);
    position: relative;
    cursor: pointer;
}

p.buttons {
    margin-top: 1.6em;
}

a.green-button, .dialog a.green-button, input[type="submit"].green {
    background-color: #292;
}

a.red-button, .dialog a.red-button, input[type="submit"].red {
    background-color: #922;
}

a.ok-button, .dialog a.ok-button, input[type="submit"].ok-button {
    float: right;
}

/* signin */

#greets p {
    font-size: 14px;
    line-height: 28px;
    margin: 0;
    padding: 14px 0 6px;
    text-align: right;
}

#dialogs .dialog {
    display: none;
    position: absolute;
    top: 0;

    background-color: #222222;
    color: white;
    padding: 4ex 2em;
    -moz-border-radius-bottomright: 16px;
    -moz-border-radius-bottomleft: 16px;
    -webkit-border-bottom-right-radius: 16px;
    -webkit-border-bottom-left-radius: 16px;
    border-bottom-right-radius: 16px;
    border-bottom-left-radius: 16px;
}

.dialog-signin-step {
    display: none;
}

.dialog p.last {
    margin-bottom: 0;
}

#dialog-signin ul {
    margin-bottom: 1.6em;
}

input.openid {
    background: #fff url(signin/openid.png) no-repeat 2px center;
    color: #000;
    padding: 3px 3px 3px 20px;
    border: 1px inset #999;
    width: 20em;
}

input.typepad {
    background-image: url(signin/typepad.png);
    width: 12em;
}

input.livejournal {
    background-image: url(signin/livejournal.png);
    width: 12em;
}

input.twitter {
    background-image: url(signin/twitter.png);
    width: 12em;
}

input.dreamwidth {
    background-image: url(signin/dreamwidth.png);
    width: 12em;
}

li.typepad {
    list-style-image: url(signin/typepad.png);
}

li.livejournal {
    list-style-image: url(signin/livejournal.png);
}

li.twitter {
    list-style-image: url(signin/twitter.png);
}

li.dreamwidth {
    list-style-image: url(signin/dreamwidth.png);
}

li.google {
    list-style-image: url(signin/google.png);
}

li.yahoo {
    list-style-image: url(signin/yahoo.png);
}

